fixed calc and modal forEach bag, added polyfill

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/vladorod/TabJS#readme",
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
+    "babel-polyfill": "^6.26.0",
+    "formdata-polyfill": "^3.0.17",
     "webpack-cli": "^3.3.0"
   },
   "devDependencies": {
